<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/app_name" />

    <EditText
        android:id="@+id/latitudeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude_hint" />

    <EditText
        android:id="@+id/longitudeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeInput"
        android:layout_marginTop="9dp"
        android:hint="@string/longitude_hint" />

    <Button
        android:id="@+id/lookupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitudeInput"
        android:layout_marginTop="9dp"
        android:text="@string/lookup" />

    <Button
        android:id="@+id/showToastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_toast"
        android:layout_below="@id/favoritesRecyclerView"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/showSnackbarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_snackbar"
        android:layout_below="@id/showToastButton"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/showAlertDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_alert_dialog"
        android:layout_below="@id/showSnackbarButton"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lookupButton"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favoritesRecyclerView"
        android:layout_marginTop="17dp" />
</RelativeLayout>
